# db-test

./: Dockerfile  docker-compose.yml  postgrest.conf  pyproject.toml  requirements.txt
FlaskCRUDApp/: main.py
FlaskCRUDApp/static/: proj.js  style.css
FlaskCRUDApp/templates/: index.html
