[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# Add your project dependencies here
# Example: package-name = "^1.0.0"

[tool.poetry.dev-dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
# Define any project-specific scripts here

[tool.poetry.extras]
# Define optional extras for your project

[tool.black]
line-length = 88
# Black code formatter configurations (if using Black)

[tool.isort]
# Isort configurations (if using isort for import sorting)
